@@ -1,4 +1,5 @@
 0.9.2 (trunk):
+* Install `obuild` automatically in all compiler switches (such as Xen).
 * Only create symlinks to `mir-foo` for a non-Xen target.
 * Add a `mirari clean` command.
 * Add the autoswitch feature via `mirari --switch=<compiler>` or the config file.
